force-app/main/default/objects/Job_Application_Contact__c/Job_Application_Contact__c.object-meta.xml
<CustomObject>
    <description>For Contacts related to a Job Application</description>
    <label>Job Application Contact</label>
    <nameField>
        <displayFormat>JA Contact-{00000}</displayFormat>
        <label>JA Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>