force-app/main/default/objects/Job_Application_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The contact to which the Job Application Contact is related</description>
    <inlineHelpText>The contact to which the Job Application Contact is related</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Application Contacts</relationshipLabel>
    <relationshipName>JA_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>