force-app/main/default/objects/Job_Application_Contact__c/fields/Job_Application_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Company_Id__c</fullName>
    <description>The accountid to which the parent Job Application is related</description>
    <formula>Job_Application__r.Company__c</formula>
    <inlineHelpText>The accountid to which the parent Job Application is related</inlineHelpText>
    <label>Job Application Company Id</label>
    <type>Text</type>
</CustomField>