force-app/main/default/objects/Job_Application_Contact__c/fields/Job_Application_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Role__c</fullName>
    <description>The role the contact has with regards to the job application</description>
    <inlineHelpText>The role the contact has with regards to the job application</inlineHelpText>
    <label>Job Application Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Interviewer</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Other Company Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>