force-app/main/default/objects/Job_Application_Contact__c/fields/Primary_JA_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_JA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The indicator whether the contact is the primary contact for the job application</description>
    <inlineHelpText>The indicator whether the contact is the primary contact for the job application</inlineHelpText>
    <label>Primary JA Contact?</label>
    <type>Checkbox</type>
</CustomField>