force-app/main/default/objects/Job_Application_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The job application contact&apos;s job title</description>
    <formula>Contact__r.Title</formula>
    <inlineHelpText>The job application contact&apos;s job title</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>